glibc: build-dependency fixes

--- a/core/g/glibc/package.xml
+++ b/core/g/glibc/package.xml
@@ -204,11 +204,12 @@
             <package name="file"/>
             <package name="autoconf"/>
             <package name="gawk"/>
+            <package name="grep"/>
             <package name="gperf"/>
             <package name="bison"/>
             <package name="libaudit-dev"/>
             <package name="libcap-dev"/>
-            <package name="libselinux-dev"/>
+            <package name="libselinux1-dev"/>
             <package name="python3"/>
             <package name="libidn2-0"/>
             <package name="libc-bin"/>
