--- a/core/s/libselinux/package.xml
+++ b/core/s/libselinux/package.xml
@@ -49,7 +49,7 @@
             <package name="libsepol1-dev" version=">= 3.1"/>
             <package name="libpcre3-dev"/>
             <package name="pkg-config"/>
-            <package name="libfts1-dev"/>
+            <package name="libfts1-dev" if="musl"/>
         </requires>
 
         <xi:include href="rules.xml"/>
