--- a/core/g/glibc/package.xml
+++ b/core/g/glibc/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <control xmlns:xi="http://www.w3.org/2001/XInclude">
-    <source name="glibc" repo="core" architecture-independent="false">
+    <source name="glibc" repo="core" architecture-independent="false" if="(tools-build or target-build) and glibc">
         <description>
             <summary>GNU C Library</summary>
             <p>
