--- a/core/m/musl-fts/package.xml
+++ b/core/m/musl-fts/package.xml
@@ -4,7 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="musl-fts" repo="core" architecture-independent="false" if="tools-build or target-build">
+    <source name="musl-fts" repo="core" architecture-independent="false" if="(tools-build or target-build) and musl">
         <description>
             <summary>Library with fts functions missing in musl libc</summary>
             <p>
