--- a/core/u/libucontext/package.xml
+++ b/core/u/libucontext/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <control xmlns:xi="http://www.w3.org/2001/XInclude">
-    <source name="libucontext" repo="core" if="tools-build or target-build">
+    <source name="libucontext" repo="core" if="(tools-build or target-build) and musl">
         <description>
             <summary>Library which provides the ucontext.h C API</summary>
             <p>
