--- a/core/g/grep/package.xml
+++ b/core/g/grep/package.xml
@@ -4,7 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="grep" repo="core" architecture-independent="false">
+    <source name="grep" repo="core" architecture-independent="false" if="tools-build or target-build">
         <description>
             <summary>GNU grep, egrep and fgrep</summary>
             <p>
