--- a/core/m/musl/package.xml
+++ b/core/m/musl/package.xml
@@ -26,8 +26,8 @@
         <sources>
             <file src="musl-1.2.2.tar.gz" subdir="sources"
                 sha256sum="9b969322012d796dc23dda27a35866034fa67d8fb67e0e2c45c913c3d43219dd"/>
-            <file src="bolt-patches-2.tar.gz" subdir="patches"
-                sha256sum="0736a042b6a7a6bea0a297d71a91cd42b44ac56428dd47d56e67bbb8ed63f181"/>
+            <file src="bolt-patches-3.tar.gz" subdir="patches"
+                sha256sum="63b6c2fd189f846d56bd1c2e6f171bd4af8ee6056f6e2502e41bc1055d921b18"/>
         </sources>
 
         <patches>
@@ -35,6 +35,7 @@
                 <file src="patches/musl-cdefs.patch"/>
                 <file src="patches/add-libssp-nonshared.patch"/>
                 <file src="patches/define-elf-nfpreg.patch"/>
+                <file src="patches/no-stack-probing-in-build-box.patch"/>
             </patchset>
         </patches>
 
